@@ -1,0 +1,2 @@
+A small wrapper on 'regexpr' to extract the matches and captured groups from
+the match of a regular expression to a character vector.
