@@ -1,0 +1,16 @@
+# $NetBSD: Makefile,v 1.1 2019/07/31 00:43:29 brook Exp $
+
+CATEGORIES=	devel R
+
+MAINTAINER=	bacon@NetBSD.org
+HOMEPAGE=	http://cran.r-project.org/web/packages/gmp/
+COMMENT=	Match regular expressions with a nicer API
+LICENSE=	mit
+
+R_PKGNAME=	rematch
+R_PKGVER=	1.0.1
+
+USE_LANGUAGES=	# none
+
+.include "../../math/R/Makefile.extension"
+.include "../../mk/bsd.pkg.mk"
